# LMS8FE_1v1

./: CMakeLists.txt  README.md
LMS8FE/: CMakeLists.txt  CMakeLists_LimeSuite.txt  LMS8FE.fbp  LMS8FE.h  LMS8FE_Device.cpp  LMS8FE_Device.h  LMS8FE_api.cpp  LMS8FE_app.cpp  LMS8FE_app.h  LMS8FE_channel_image.h  LMS8FE_channel_image_230127.h  LMS8FE_cmd.cpp  LMS8FE_constants.h  LMS8FE_gui.cpp  LMS8FE_gui.h  LMS8FE_wxgui.cpp  LMS8FE_wxgui.h
LMS8FE/LMS8001/: CMakeLists.txt  lms8suiteAppFrame.cpp
LMS8FE/LMS8001/API/: lms8_api.cpp
LMS8FE/LMS8001/lms8001/: lmsComms.cpp  lmsComms.h
LMS8FE/LMS8001/lms8001/connectionManager/: ConnectionCOM.cpp  ConnectionCOM.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionSPI.cpp  ConnectionUSB.h
LMS8FE/examples/: CMakeLists.txt  LMS8FE_LMS8_example.cpp  LMS8FE_USB_example.cpp  LMS8FE_example.cpp
